--- a/quizME/src/styles.css
+++ b/quizME/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap");
+
+* {
+  font-family: "Open Sans", sans-serif;
+}
