QuizME version-1 Completed 🎉💥

--- a/quizME/src/app/app.component.html
+++ b/quizME/src/app/app.component.html
@@ -1,3 +1,4 @@
-<!-- <app-welcome></app-welcome> -->
-
-<router-outlet></router-outlet>
+<p-card>
+  <h3>QuizME</h3>
+  <router-outlet></router-outlet>
+</p-card>
