--- a/quizME/src/app/welcome/welcome.component.css
+++ b/quizME/src/app/welcome/welcome.component.css
@@ -2,5 +2,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  position: relative;
+  min-height: 90vh;
+}
+
+input,
+:host >>> .ui-dropdown,
+:host >>> .ui-dropdown-label,
+:host >>> .ui-dropdown .ui-dropdown-trigger,
+:host >>> .ui-dropdown-items-wrapper,
+:host >>> .ui-button {
+  border-radius: 0;
+  background-color: #f1f3f6;
 }
