--- a/quizME/src/app/quiz/quiz.component.html
+++ b/quizME/src/app/quiz/quiz.component.html
@@ -1,66 +1,63 @@
 <!-- <p-paginator [rows]="1" [totalRecords]="quizQueries.length"> </p-paginator> -->
+<div class="top-section">
+  <p-button label="Submit" (click)="submitQuiz()"></p-button>
+</div>
+<div class="question-section">
+  <p-dialog
+    header="QuizME"
+    [modal]="true"
+    [(visible)]="submitConfirm"
+    [style]="{ width: '50vw' }"
+    [baseZIndex]="10000"
+  >
+    {{ confirmationContent }}
+    <p-footer>
+      <button
+        type="button"
+        pButton
+        icon="pi pi-check"
+        (click)="onYes()"
+        label="Yes"
+      ></button>
+      <button
+        type="button"
+        pButton
+        icon="pi pi-times"
+        (click)="submitConfirm = false"
+        label="No"
+        class="ui-button-secondary"
+      ></button>
+    </p-footer>
+  </p-dialog>
 
-<p-button label="Submit" (click)="submitQuiz()"></p-button>
-<p-dialog
-  header="QuizME"
-  [modal]="true"
-  [(visible)]="submitConfirm"
-  [style]="{ width: '50vw' }"
-  [baseZIndex]="10000"
->
-  {{ confirmationContent }}
-  <p-footer>
-    <button
-      type="button"
-      pButton
-      icon="pi pi-check"
-      (click)="onYes()"
-      label="Yes"
-    ></button>
-    <button
-      type="button"
-      pButton
-      icon="pi pi-times"
-      (click)="submitConfirm = false"
-      label="No"
-      class="ui-button-secondary"
-    ></button>
-  </p-footer>
-</p-dialog>
-
-<p-fieldset legend="Question-{{ questionNo + 1 }}">
-  <div class="p-grid" style="margin-bottom: 10px;">
-    <p>{{ quizQueries[questionNo].question | sanitizeHtml }}</p>
-    <div class="p-col-12" *ngFor="let opt of quizQueries[questionNo].options">
-      <p-radioButton
-        name="answers"
-        [value]="opt | sanitizeHtml"
-        [label]="opt | sanitizeHtml"
-        [(ngModel)]="quizQueries[questionNo].selectedAnswer"
-        inputId="opt1"
-      ></p-radioButton>
+  <p-fieldset legend="Question-{{ questionNo + 1 }}">
+    <div class="p-grid" style="margin-bottom: 10px;">
+      <h3>{{ quizQueries[questionNo].question | sanitizeHtml }}</h3>
+      <div class="p-col-12" *ngFor="let opt of quizQueries[questionNo].options">
+        <p-radioButton
+          name="answers"
+          [value]="opt | sanitizeHtml"
+          [label]="opt | sanitizeHtml"
+          [(ngModel)]="quizQueries[questionNo].selectedAnswer"
+          inputId="opt1"
+        ></p-radioButton>
+      </div>
     </div>
-  </div>
-</p-fieldset>
+  </p-fieldset>
+</div>
 
-<p-button
-  label="Prev"
-  icon="pi pi-chevron-left"
-  iconPos="left"
-  (click)="prevQuestion()"
-></p-button>
+<div class="nav-section">
+  <p-button
+    label="Prev"
+    icon="pi pi-chevron-left"
+    iconPos="left"
+    (click)="prevQuestion()"
+  ></p-button>
 
-<p-button
-  label="Next"
-  icon="pi pi-chevron-right"
-  iconPos="right"
-  (click)="nextQuestion()"
-></p-button>
-
-<!-- <app-result
-  [finalScore]="score"
-  [quizAnsweredQueries]="quizQueries"
-></app-result> -->
-<!-- {{ answers || "None" }} -->
-
-<!-- {{ selectedAns || "None" }} -->
+  <p-button
+    label="Next"
+    icon="pi pi-chevron-right"
+    iconPos="right"
+    (click)="nextQuestion()"
+  ></p-button>
+</div>
