--- a/quizME/src/app/welcome/welcome.component.html
+++ b/quizME/src/app/welcome/welcome.component.html
@@ -1,7 +1,8 @@
+<div class="container">
 <form
   [formGroup]="quizForm"
   (ngSubmit)="onSubmit(quizForm.value)"
-  class="container"
+
 >
   <div class="ui-fluid p-formgrid p-grid p-dir-col">
     <div class="p-field p-col-12">
@@ -43,3 +44,4 @@
     </div>
   </div>
 </form>
+</div>
